# bot-runner

./: .gitignore  CosmosGame.sln  Directory.Build.props  README.md
Backend/: Backend.csproj  Constants.cs  Program.cs  Readme.txt
Backend.Contracts/: Backend.Contracts.csproj  Constants.cs  IMasterGrain.cs
Backend.Contracts/Streams/: StreamConsumer.cs  StreamProducer.cs
Backend.GrpcHost/: Backend.GrpcHost.csproj  Program.cs
Backend.GrpcHost/Services/: WorkerService.cs
Backend.Host.Grpc/: Backend.Host.Grpc.csproj  Program.cs  Startup.cs
Backend.Host.Grpc/Properties/: launchSettings.json
Backend.Host.Grpc/Services/: WorkerService.cs
Backend.MongoStorage/: Backend.MongoStorage.csproj  HostBuilderExtensions.cs  MongoDbJobStorage.cs
Backend/Domain/: World.cs
Backend/Grains/: MasterGrain.cs
Backend/Services/: FakePlanetsStorage.cs  WorldStateStorage.cs
Cosmos.Domain/: Cosmos.Domain.fsproj  Player.fs  World.fs
Frontend/: Frontend.csproj  Program.cs  Startup.cs
Frontend/Components/: EditableInputComponent.razor  FormInputComponent.razor  (+1 more)
Miteng.Domain/: Library.fs
Protos/: Protos.projitems  Protos.shproj  worker.proto
Shared/: Ensures.cs  IPlanetGrain.cs  IPlayerGrain.cs  IWorldGrain.cs  Option.cs  PlayerInfo.cs  Shared.csproj
Worker/: Program.cs  Worker.csproj
docker/: docker-compose.yml
rust_src/: .env
src/: Cargo.toml  Directory.Build.props
src/planetary-backend/: Cargo.toml
src/planetary-backend/src/: auth.rs  error.rs  lib.rs  player.rs  storage.rs
src/planetary-backend/src/actors/: mod.rs  player.rs  universe.rs
(+104 files in other folders)
